// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should match snapshot 1`] = `
<scale-slider>
  <mock:shadow-root>
    <div class="slider slider--web" part="slider web">
      <div class="slider__headline">
        <div class="slider__display-value" part="display-value">
          %
        </div>
      </div>
      <div class="slider__track-wrapper" part="track-wrapper">
        <div class="slider__track" part="track">
          <div class="slider__bar" part="bar" style="width: 0%; background-color: var(--background-bar);"></div>
          <div class="slider_track-point-wrapper" id="slider_track-point-wrapper"></div>
          <div class="slider__thumb-wrapper-to" id="2-slider-0-wrapper" part="thumb-wrapper" style="left: 0%;">
            <div aria-labelledby="slider-0-label" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuetext="undefined" class="slider__thumb" id="2-slider-0" part="thumb" role="slider" tabindex="0"></div>
          </div>
        </div>
        <input type="hidden">
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-slider>
`;

exports[`Slider should match snapshot 2`] = `
<scale-slider value-to="10">
  <mock:shadow-root>
    <div class="slider slider--web" part="slider web">
      <div class="slider__headline">
        <div class="slider__display-value" part="display-value">
          10%
        </div>
      </div>
      <div class="slider__track-wrapper" part="track-wrapper">
        <div class="slider__track" part="track">
          <div class="slider__bar" part="bar" style="width: 10%; background-color: var(--background-bar);"></div>
          <div class="slider_track-point-wrapper" id="slider_track-point-wrapper"></div>
          <div class="slider__thumb-wrapper-to" id="2-slider-1-wrapper" part="thumb-wrapper" style="left: 10%;">
            <div aria-labelledby="slider-1-label" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="slider__thumb" id="2-slider-1" part="thumb" role="slider" tabindex="0"></div>
          </div>
        </div>
        <input type="hidden">
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-slider>
`;
